main: formatting code with prettier

--- a/index.html
+++ b/index.html
@@ -2,24 +2,33 @@
 
 <html lang="fr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Fisheye</title>
-    <link rel="icon" type="image/png" href="assets/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-    <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
+    <link
+      href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
+      rel="stylesheet"
+    />
     <link href="css/index.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
     <header role="none">
       <a href="index.html">
-        <img src="assets/images/logo.png" class="logo" alt="logo de Fisheye - page d'accueil"/>
+        <img
+          src="assets/images/logo.png"
+          class="logo"
+          alt="logo de Fisheye - page d'accueil"
+        />
       </a>
       <h1>Nos photographes</h1>
     </header>
-    <main role="none">
-    </main>
-    
+    <main role="none"></main>
+
     <script src="scripts/factories/home/index.js"></script>
     <script src="scripts/pages/index.js"></script>
   </body>
