fish-eye-prod: adding tool to modal

--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
               <li>Css3</li>
               <li>JsDoc</li>
               <li>Figma</li>
+              <li>VsCode</li>
               <li>Vanilla JS</li>
               <li>Git & GitHub</li>
-              <li>La sémantique</li>
+              <li>Bootstrap</li>
               <li>L'accessibilité</li>
               <li>Pattern Factory</li>
               <li>Responsive design</li>
